# GeoSam

./: .gitignore  README.md  cloudbuild.yaml  dashboard.py  pyproject.toml
api/: Dockerfile  main.py  requirements.txt
docs/: PRD.md  attributes.md  glossary.md  overview.md  sam_segmentation.md  seismic_acquisition.md  seismic_kb.md  seismic_processing.md  seismic_volume.md
geosam/: __init__.py
geosam/attributes/: __init__.py  compute.py
geosam/io/: __init__.py  segy.py
geosam/sam/: __init__.py  modal_runner.py  segment.py
scripts/: generate_test_segy.py
ui/: Dockerfile  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: AttributeColumn.tsx  AttributeRow.tsx  MaskTile.tsx  VolumePanel.tsx
ui/lib/: api.ts
ui/types/: index.ts
